--- a/AsianFoodApp/Base.lproj/Main.storyboard
+++ b/AsianFoodApp/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
             </objects>
             <point key="canvasLocation" x="662" y="-647"/>
         </scene>
-        <!--La Carte-->
+        <!--Menu-->
         <scene sceneID="qa2-Lc-lfo">
             <objects>
                 <viewController id="wRQ-18-fUI" customClass="MenuController" customModule="AsianFoodApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -150,7 +150,7 @@
                             <constraint firstItem="hVD-QS-mRw" firstAttribute="top" secondItem="DGT-jT-bYA" secondAttribute="top" constant="30" id="ujp-L9-Srs"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="La Carte" id="8O6-FG-LSm"/>
+                    <navigationItem key="navigationItem" title="Menu" id="8O6-FG-LSm"/>
                     <connections>
                         <outletCollection property="menuItemImagesViews" destination="TO8-9B-z1D" collectionClass="NSMutableArray" id="iMl-Vb-CQA"/>
                         <outletCollection property="menuItemImagesViews" destination="86I-py-I6v" collectionClass="NSMutableArray" id="SdQ-ht-tY2"/>
@@ -191,17 +191,31 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bsn-Oy-HQl">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="7r3-YR-8P3">
                                 <rect key="frame" x="10" y="475" width="373" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Country" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bsn-Oy-HQl">
+                                        <rect key="frame" x="0.0" y="0.0" width="333" height="30"/>
+                                        <fontDescription key="fontDescription" name="Avenir-MediumOblique" family="Avenir" pointSize="22"/>
+                                        <color key="textColor" systemColor="systemRedColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iR5-Vw-hGg">
+                                        <rect key="frame" x="333" y="0.0" width="40" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="fye-rE-XcQ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="2KI-Q0-JtH"/>
+                                    <constraint firstAttribute="height" constant="30" id="klg-FE-LQU"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-MediumOblique" family="Avenir" pointSize="19"/>
-                                <color key="textColor" systemColor="systemRedColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HsX-YP-M1j">
-                                <rect key="frame" x="20" y="515" width="353" height="254"/>
+                                <rect key="frame" x="20" y="505" width="353" height="244"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                 <color key="textColor" systemColor="secondaryLabelColor"/>
                                 <nil key="highlightedColor"/>
@@ -210,17 +224,17 @@
                         <viewLayoutGuide key="safeArea" id="rj1-LX-K5T"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="rj1-LX-K5T" firstAttribute="bottom" secondItem="HsX-YP-M1j" secondAttribute="bottom" id="DAl-c1-QIl"/>
-                            <constraint firstItem="Bsn-Oy-HQl" firstAttribute="leading" secondItem="rj1-LX-K5T" secondAttribute="leading" constant="10" id="EKS-Dp-6na"/>
+                            <constraint firstItem="HsX-YP-M1j" firstAttribute="top" secondItem="7r3-YR-8P3" secondAttribute="bottom" id="9hD-Wp-RIl"/>
+                            <constraint firstItem="rj1-LX-K5T" firstAttribute="bottom" secondItem="HsX-YP-M1j" secondAttribute="bottom" constant="20" id="DAl-c1-QIl"/>
+                            <constraint firstItem="7r3-YR-8P3" firstAttribute="top" secondItem="iqA-an-t2B" secondAttribute="bottom" constant="20" id="EuV-St-LWY"/>
                             <constraint firstItem="rj1-LX-K5T" firstAttribute="trailing" secondItem="Qsq-Fd-rHL" secondAttribute="trailing" constant="20" id="GGM-Ke-ZcX"/>
                             <constraint firstItem="HsX-YP-M1j" firstAttribute="leading" secondItem="rj1-LX-K5T" secondAttribute="leading" constant="20" id="IZ0-pZ-fQC"/>
                             <constraint firstItem="iqA-an-t2B" firstAttribute="leading" secondItem="rj1-LX-K5T" secondAttribute="leading" id="LAQ-lg-pcg"/>
+                            <constraint firstItem="rj1-LX-K5T" firstAttribute="trailing" secondItem="7r3-YR-8P3" secondAttribute="trailing" constant="10" id="R2P-2Q-0n7"/>
                             <constraint firstItem="iqA-an-t2B" firstAttribute="trailing" secondItem="rj1-LX-K5T" secondAttribute="trailing" id="Rfb-iD-JRP"/>
                             <constraint firstItem="Qsq-Fd-rHL" firstAttribute="leading" secondItem="rj1-LX-K5T" secondAttribute="leading" constant="20" id="Zuw-9I-cki"/>
-                            <constraint firstItem="HsX-YP-M1j" firstAttribute="top" secondItem="Bsn-Oy-HQl" secondAttribute="bottom" constant="10" id="b6Q-1K-05m"/>
-                            <constraint firstItem="rj1-LX-K5T" firstAttribute="trailing" secondItem="Bsn-Oy-HQl" secondAttribute="trailing" constant="10" id="bUb-6O-rhM"/>
                             <constraint firstItem="rj1-LX-K5T" firstAttribute="trailing" secondItem="HsX-YP-M1j" secondAttribute="trailing" constant="20" id="fVY-ij-tOW"/>
-                            <constraint firstItem="Bsn-Oy-HQl" firstAttribute="top" secondItem="iqA-an-t2B" secondAttribute="bottom" constant="20" id="gHZ-fd-G0Z"/>
+                            <constraint firstItem="7r3-YR-8P3" firstAttribute="leading" secondItem="rj1-LX-K5T" secondAttribute="leading" constant="10" id="gdE-6U-EpR"/>
                             <constraint firstItem="Qsq-Fd-rHL" firstAttribute="top" secondItem="rj1-LX-K5T" secondAttribute="top" constant="-20" id="sxH-7A-Jlz"/>
                             <constraint firstItem="iqA-an-t2B" firstAttribute="top" secondItem="Qsq-Fd-rHL" secondAttribute="bottom" constant="30" id="vUQ-pI-J68"/>
                         </constraints>
@@ -229,6 +243,7 @@
                     <connections>
                         <outlet property="dishCountry" destination="Bsn-Oy-HQl" id="69m-g0-iVv"/>
                         <outlet property="dishDiscussion" destination="HsX-YP-M1j" id="aQI-TS-SXx"/>
+                        <outlet property="dishFlag" destination="iR5-Vw-hGg" id="GxQ-VX-gpl"/>
                         <outlet property="dishImage" destination="Qsq-Fd-rHL" id="xg7-Od-YIy"/>
                         <outlet property="dishLabel" destination="iqA-an-t2B" id="9Tb-qz-xif"/>
                     </connections>
