--- a/AsianFoodApp/Base.lproj/Main.storyboard
+++ b/AsianFoodApp/Base.lproj/Main.storyboard
@@ -260,6 +260,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="Qek-7O-seR" kind="relationship" relationship="viewControllers" id="s9N-b8-MMZ"/>
